<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/a007">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="34dp"
            android:layout_height="31dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/About_Us"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.956"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/translate" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="275dp"
            android:layout_height="223dp"
            android:layout_marginTop="68dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="216dp"
            android:layout_height="47dp"
            android:layout_marginTop="12dp"
            android:background="#2DFFFFFF"
            android:drawableStart="@drawable/user"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#B5FF9800"
            android:ems="5"
            android:text="@string/log_in"
            android:textColor="#FFFDFD"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_pass" />

        <TextView
            android:id="@+id/txtSignup"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="28dp"
            android:text="@string/not_registered"
            android:textColor="#D5840B"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginbtn" />

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="216dp"
            android:layout_height="47dp"
            android:background="#20FFFFFF"
            android:drawableStart="@drawable/pass"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_username" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>