<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/a001">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="7dp"
            android:text="@string/already"
            android:textColor="#D5840B"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_button" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="401dp"
            android:layout_height="55dp"
            android:layout_marginTop="68dp"
            android:background="#00FEFFFF"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/registration_form"
            android:textAlignment="center"
            android:textColor="#FF9800"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:background="#30FFFFFF"
            android:drawableStart="@drawable/email"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.541"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:background="#30FFFFFF"
            android:drawableStart="@drawable/pass"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.541"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/password"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:background="#30FFFFFF"
            android:drawableStart="@drawable/pass"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.541"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass" />

        <EditText
            android:id="@+id/username"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:background="#30FFFFFF"
            android:clickable="false"
            android:drawableStart="@drawable/user"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:shadowColor="#00FFFFFF"
            android:singleLine="false"
            android:textAlignment="center"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.577"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/address"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:background="#30FFFFFF"
            android:drawableStart="@drawable/home"
            android:ems="10"
            android:hint="@string/address"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.541"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <Button
            android:id="@+id/sign_button"
            android:layout_width="202dp"
            android:layout_height="55dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="244dp"
            android:layout_weight="1"
            android:background="#C3FF9800"
            android:text="@string/register"
            android:textColor="#E8FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>