<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.example.menu.GarbageCollectionService">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D5B9F6CA">

        <ImageView
            android:id="@+id/imageService"
            android:layout_width="316dp"
            android:layout_height="194dp"
            android:contentDescription="@string/collection_service"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.158"
            app:srcCompat="@drawable/gsc" />

        <Button
            android:id="@+id/btnRequest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="40dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/garbage_collection_request"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textAddress2"
            app:layout_constraintHorizontal_bias="0.434"
            app:layout_constraintStart_toStartOf="@+id/textAddress2"
            app:layout_constraintTop_toBottomOf="@+id/textAddress2" />

        <TextView
            android:id="@+id/textAddress1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/address"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textDate"
            app:layout_constraintTop_toBottomOf="@+id/textDate" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="283dp"
            android:layout_height="31dp"
            android:layout_marginTop="32dp"
            android:text="@string/click_to_select_service_date_time"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageService"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="@+id/imageService"
            app:layout_constraintTop_toBottomOf="@+id/imageService" />

        <EditText
            android:id="@+id/textAddress2"
            android:layout_width="285dp"
            android:layout_height="0dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textAddress1"
            app:layout_constraintTop_toBottomOf="@+id/textAddress1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>