<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.menu.ChangePassword">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/a003">

        <TextView
            android:id="@+id/Change_Password"
            android:layout_width="401dp"
            android:layout_height="55dp"
            android:layout_marginTop="68dp"
            android:background="#00FEFFFF"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/Change_Password"
            android:textAlignment="center"
            android:textColor="#FF9800"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editpass"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:layout_marginTop="28dp"
            android:background="#30FFFFFF"
            android:drawableStart="@drawable/password"
            android:ems="10"
            android:hint="@string/editpass"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1"
            android:password="false"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.534"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editcurrentpass" />

        <EditText
            android:id="@+id/editcurrentpass"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:layout_marginTop="28dp"
            android:background="#30FFFFFF"
            android:drawableStart="@drawable/pass"
            android:ems="10"
            android:hint="@string/editcurrentpass"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1"
            android:password="false"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.534"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Change_Password" />

        <EditText
            android:id="@+id/editpassword"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:layout_marginTop="28dp"
            android:background="#30FFFFFF"
            android:drawableStart="@drawable/password"
            android:ems="10"
            android:hint="@string/editpassword"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.534"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editpass" />

        <Button
            android:id="@+id/editpass_button"
            android:layout_width="243dp"
            android:layout_height="63dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="244dp"
            android:layout_weight="1"
            android:background="#C3FF9800"
            android:text="@string/editpass_button"
            android:textColor="#E8FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editpassword"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>