<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.menu.Menu">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    >

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/btnTutorial"
        style="@style/Button_font"
        android:layout_width="187dp"
        android:layout_height="43dp"
        android:background="@drawable/rounded_button"
        android:text="@string/tutorial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnPractical"
        style="@style/Button_font"
        android:layout_width="187dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/practical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTutorial" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="17dp"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/About_Us"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="212dp"
        android:layout_height="322dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>